# sovergrid-cli

./: .gitignore  README.md  SoverGrid_Akash_Grant.md  fix_cli.py  fix_timeout.py  pyproject.toml  sovergrid.yaml
docs/: WHITEPAPER.md
examples/: cdn-only.yaml  compute-only.yaml  database-only.yaml  full-stack.yaml  ml-training-only.yaml  sovergrid.yaml  storage-only.yaml
sovergrid/: __init__.py  cli.py  config.py  dev_runner.py  dockerizer.py  logger.py  mcp_server.py  orchestrator.py  scanner.py
sovergrid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sovergrid/services/: __init__.py  base.py  blockchain.py  cdn.py  compute.py  database.py  ml_training.py  storage.py  token.py
